# MHR

./: .gitignore  README.md  demo.py  index.html  pixi.toml  pyproject.toml  setup.py  styles.css
.github/workflows/: ci.yml  publish.yml
assets/: .#compact_v6_1.model  .compact_v6_1.model.swp
conda/: meta.yaml
mhr/: __init__.py  io.py  mhr.py  utils.py
pixi_linux/: pyproject.toml
pixi_osx/: pyproject.toml
proto/: io.py  proto.py  utils.py
scripts/: download_assets.sh  test_wheel.py
tests/: test_basic.py  test_mhr.py  test_proto.py
tools/mhr_LOD_conversion/: README.md  example.py  lod1_to_lod0_mapping.npz  lod1_to_lod2_mapping.npz  lod1_to_lod3_mapping.npz  lod1_to_lod4_mapping.npz  lod1_to_lod5_mapping.npz  lod1_to_lod6_mapping.npz
tools/mhr_smpl_conversion/: README.md  conversion.py  example.py  pymomentum_fitting.py
tools/mhr_smpl_conversion/data/sam3d_body_outputs/: img_subj00.npz  img_subj01.npz  img_subj02.npz  img_subj03.npz
tools/mhr_visualization/: MHR visualization.ipynb  README.md
tools/smpl_mhr_conversion/: README.md  example.py  fitting_mhr_with_pymomentum.py  smpl_mhr.py
tools/smpl_proto_conversion/: README.md  example.py  fitting_proto_with_pymomentum.py  smpl_proto.py
tools/torchscript/: make_torchscript_model.py  torchscript_mhr.py
