[project]
name = "mhr"
version = "0.1.0"
description = "Momentum Human Rig"
authors = [{name = "MHR Contributors"}]
requires-python = ">= 3.12"
dependencies = [
    "pymomentum-gpu>=0.1.84",
    "scikit-learn>=1.7.2,<2",
    "smplx>=0.1.28,<0.2",
    "torch",
    "tqdm>=4.67.1,<5",
    "trimesh>=4.8.3,<5",
]

readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/facebookresearch/MHR"
Repository = "https://github.com/facebookresearch/MHR"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[tool.hatch.build.targets.wheel]
packages = ["mhr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"
