[project]
authors = [{name = "MHR Contributors"}]
dependencies = ["torch", "trimesh>=4.8.3,<5", "pytest>=8.0"]
name = "mhr"
requires-python = ">= 3.11"
version = "0.1.0"

readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/facebookresearch/MHR"
Repository = "https://github.com/facebookresearch/MHR"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["mhr"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
test = "pytest tests/ -v"
build = "python -m build"
publish = "twine upload --repository mhr dist/*"
clean = "rm -rf dist build *.egg-info"

[tool.pixi.pypi-dependencies]
mhr = { path = ".", editable = true }
build = ">=1.0"
twine = ">=5.0"

[tool.pixi.dependencies]
pymomentum = ">=0.1.90"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
default = ["py312"]
py312 = ["py312"]
py313 = ["py313"]
