[project]
authors = [{name = "Jinlong Yang", email = "jinlong.yang@oculus.com"}]
dependencies = ["torch", "trimesh>=4.8.3,<5", "tqdm>=4.67.1,<5", "smplx>=0.1.28,<0.2", "scikit-learn>=1.7.2,<2"]
name = "mhr"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["mhr"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
mhr = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pymomentum = "==0.1.90"
# pymomentum = ">=0.1.74,<0.2"
